--- a/src/gtk/gtk-4.0/gtk-dark-green.css
+++ b/src/gtk/gtk-4.0/gtk-dark-green.css
@@ -74,7 +74,7 @@ treeview.expander:disabled {
 }
 
 textview:drop(active) {
-  caret-color: #D19A66;
+  caret-color: #A0C980;
 }
 
 textview border {
@@ -462,9 +462,9 @@ entry.error > selection {
 
 spinbutton.vertical > text.success, spinbutton.success:not(.vertical),
 entry.success {
-  color: #FAFAFA;
+  color: #DDE2E7;
   border-color: rgba(25, 25, 27, 0.25);
-  background-color: #5b7e5c;
+  background-color: #748e66;
 }
 
 spinbutton.vertical > text.success, spinbutton.success:not(.vertical),
@@ -475,27 +475,27 @@ entry.success {
 
 spinbutton.vertical > text.success:focus-within, spinbutton.success:focus-within:not(.vertical),
 entry.success:focus-within {
-  outline-color: rgba(118, 175, 111, 0.5);
+  outline-color: rgba(160, 201, 128, 0.5);
   outline-width: 2px;
   outline-offset: -2px;
 }
 
 spinbutton.vertical > text.success > image, spinbutton.success:not(.vertical) > image,
 entry.success > image {
-  color: #FAFAFA;
+  color: #DDE2E7;
 }
 
 spinbutton.vertical > text.success:focus-within, spinbutton.success:focus-within:not(.vertical),
 entry.success:focus-within {
-  color: #FAFAFA;
-  background-color: #76AF6F;
+  color: #DDE2E7;
+  background-color: #A0C980;
   box-shadow: none;
 }
 
 spinbutton.vertical > text.success > selection, spinbutton.success:not(.vertical) > selection,
 entry.success > selection {
-  background-color: #FAFAFA;
-  color: #76AF6F;
+  background-color: #DDE2E7;
+  color: #A0C980;
 }
 
 spinbutton.vertical > text.search-missing, spinbutton.search-missing:not(.vertical),
@@ -559,8 +559,8 @@ entry.password image.caps-lock-indicator {
 spinbutton.vertical > text:drop(active), spinbutton:drop(active):not(.vertical),
 entry:drop(active):focus-within,
 entry:drop(active) {
-  border-color: #D19A66;
-  box-shadow: inset 0 0 0 1px #D19A66;
+  border-color: #A0C980;
+  box-shadow: inset 0 0 0 1px #A0C980;
 }
 
 .osd spinbutton.vertical > text, .osd spinbutton:not(.vertical), .osd entry {
@@ -595,13 +595,13 @@ entry progress > trough > progress {
   background-image: none;
   border-radius: 0;
   border-width: 0 0 2px;
-  border-color: #608E32;
+  border-color: #A0C980;
   border-style: solid;
   box-shadow: none;
 }
 
 spinbutton.vertical.linked:not(.vertical) > text:drop(active) + text, spinbutton.vertical.linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + text, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + spinbutton:not(.vertical), .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + spinbutton:not(.vertical), spinbutton.vertical.linked:not(.vertical) > text:drop(active) + button, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + button, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + menubutton > button, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + menubutton > button, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + dropdown > button, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + dropdown > button, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + colorbutton > button, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + colorbutton > button, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + fontbutton > button, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + fontbutton > button, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + filechooserbutton > button, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + filechooserbutton > button, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + combobox > box > button.combo, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + combobox > box > button.combo, spinbutton.vertical.linked:not(.vertical) > text:drop(active) + entry, .linked:not(.vertical) > spinbutton:drop(active):not(.vertical) + entry, .linked:not(.vertical) > entry:drop(active) + button, .linked:not(.vertical) > entry:drop(active) + menubutton > button, .linked:not(.vertical) > entry:drop(active) + dropdown > button, .linked:not(.vertical) > entry:drop(active) + colorbutton > button, .linked:not(.vertical) > entry:drop(active) + fontbutton > button, .linked:not(.vertical) > entry:drop(active) + filechooserbutton > button, .linked:not(.vertical) > entry:drop(active) + combobox > box > button.combo, spinbutton.vertical.linked:not(.vertical) > entry:drop(active) + text, .linked:not(.vertical) > entry:drop(active) + spinbutton:not(.vertical), .linked:not(.vertical) > entry:drop(active) + entry {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
 }
 
 spinbutton.vertical.linked > text:not(:disabled) + entry:not(:disabled), .linked.vertical > spinbutton:not(:disabled):not(.vertical) + entry:not(:disabled), spinbutton.vertical.linked > text:not(:disabled) + text:not(:disabled), spinbutton.vertical.linked > spinbutton:not(:disabled):not(.vertical) + text:not(:disabled), spinbutton.vertical.linked > text:not(:disabled) + spinbutton:not(:disabled):not(.vertical), .linked.vertical > spinbutton:not(:disabled):not(.vertical) + spinbutton:not(:disabled):not(.vertical), .linked.vertical > entry:not(:disabled) + entry:not(:disabled), spinbutton.vertical.linked > entry:not(:disabled) + text:not(:disabled), .linked.vertical > entry:not(:disabled) + spinbutton:not(:disabled):not(.vertical) {
@@ -616,7 +616,7 @@ spinbutton.vertical.linked > text + text:drop(active):not(:only-child), spinbutt
 spinbutton.vertical.linked > text + entry:drop(active):not(:only-child),
 .linked.vertical > spinbutton:not(.vertical) + entry:drop(active):not(:only-child), spinbutton.vertical.linked > entry + text:drop(active):not(:only-child), .linked.vertical > entry + spinbutton:drop(active):not(:only-child):not(.vertical),
 .linked.vertical > entry + entry:drop(active):not(:only-child) {
-  border-top-color: #D19A66;
+  border-top-color: #A0C980;
 }
 
 spinbutton.vertical.linked > text:drop(active):not(:only-child) + text, spinbutton.vertical.linked > spinbutton:drop(active):not(:only-child):not(.vertical) + text, spinbutton.vertical.linked > text:drop(active):not(:only-child) + spinbutton:not(.vertical), .linked.vertical > spinbutton:drop(active):not(:only-child):not(.vertical) + spinbutton:not(.vertical),
@@ -644,7 +644,7 @@ spinbutton.vertical.linked > text:drop(active):not(:only-child) + combobox > box
 .linked.vertical > entry:drop(active):not(:only-child) + fontbutton > button,
 .linked.vertical > entry:drop(active):not(:only-child) + filechooserbutton > button,
 .linked.vertical > entry:drop(active):not(:only-child) + combobox > box > button.combo {
-  border-top-color: #D19A66;
+  border-top-color: #A0C980;
 }
 
 treeview entry:focus-within:dir(rtl), treeview entry:focus-within:dir(ltr) {
@@ -859,9 +859,9 @@ button.text-button.image-button.popup {
 dropdown:drop(active) button.combo,
 combobox:drop(active) button.combo,
 button:drop(active) {
-  color: #D19A66;
-  border-color: #D19A66;
-  box-shadow: inset 0 0 0 1px #D19A66;
+  color: #A0C980;
+  border-color: #A0C980;
+  box-shadow: inset 0 0 0 1px #A0C980;
 }
 
 
@@ -1243,13 +1243,13 @@ stacksidebar row.needs-attention > label:dir(rtl), stackswitcher > button.needs-
 
 .linked:not(.vertical):not(.path-bar) > entry + entry:drop(active):not(:last-child),
 .linked:not(.vertical):not(.path-bar) > entry + entry:drop(active):last-child {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
 }
 
 .linked:not(.vertical):not(.path-bar) > entry:drop(active):not(:only-child) + entry,
 .linked:not(.vertical):not(.path-bar) > entry:drop(active):not(:only-child) + button,
 .linked:not(.vertical):not(.path-bar) > entry:drop(active):not(:only-child) + combobox > box > button.combo {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
   margin-left: 0;
 }
 
@@ -1359,13 +1359,13 @@ stacksidebar row.needs-attention > label:dir(rtl), stackswitcher > button.needs-
 
 .osd .linked:not(.vertical) > entry + entry:drop(active):not(:last-child),
 .osd .linked:not(.vertical) > entry + entry:drop(active):last-child {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
 }
 
 .osd .linked:not(.vertical) > entry:drop(active):not(:only-child) + entry,
 .osd .linked:not(.vertical) > entry:drop(active):not(:only-child) + button,
 .osd .linked:not(.vertical) > entry:drop(active):not(:only-child) + combobox > box > button.combo {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
   margin-left: 0;
 }
 
@@ -1463,13 +1463,13 @@ stacksidebar row.needs-attention > label:dir(rtl), stackswitcher > button.needs-
 
 .linked.vertical > entry + entry:drop(active):not(:last-child),
 .linked.vertical > entry + entry:drop(active):last-child {
-  border-top-color: #D19A66;
+  border-top-color: #A0C980;
 }
 
 .linked.vertical > entry:drop(active):not(:only-child) + entry,
 .linked.vertical > entry:drop(active):not(:only-child) + button,
 .linked.vertical > entry:drop(active):not(:only-child) + combobox > box > button.combo {
-  border-top-color: #D19A66;
+  border-top-color: #A0C980;
   margin-left: 0;
 }
 
@@ -1574,7 +1574,7 @@ headerbar .linked:not(.vertical):not(.path-bar) > entry:focus-within:not(:only-c
 headerbar .linked:not(.vertical):not(.path-bar) > entry + entry:drop(active):not(:last-child),
 headerbar .linked:not(.vertical):not(.path-bar) > entry + entry:drop(active):last-child, .titlebar .linked:not(.vertical):not(.path-bar) > entry + entry:drop(active):not(:last-child),
 .titlebar .linked:not(.vertical):not(.path-bar) > entry + entry:drop(active):last-child {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
 }
 
 headerbar .linked:not(.vertical):not(.path-bar) > entry:drop(active):not(:only-child) + entry, .titlebar .linked:not(.vertical):not(.path-bar) > entry:drop(active):not(:only-child) + entry {
@@ -2645,7 +2645,7 @@ headerbar stackswitcher > button {
 }
 
 headerbar entry progress {
-  border-color: #608E32;
+  border-color: #A0C980;
   background-image: none;
   background-color: transparent;
 }
@@ -3304,8 +3304,8 @@ columnview.view.progressbar,
 treeview.view.progressbar {
   color: #FAFAFA;
   border-radius: 3px;
-  background-color: #608E32;
-  background-image: image(#608E32);
+  background-color: #A0C980;
+  background-image: image(#A0C980);
 }
 
 columnview.view.progressbar:selected, columnview.view.progressbar:selected:focus,
@@ -4563,7 +4563,7 @@ progressbar.osd > progress {
 }
 
 progressbar > trough > progress {
-  background-color: #608E32;
+  background-color: #A0C980;
   border: none;
   border-radius: 3px;
   box-shadow: none;
@@ -4674,8 +4674,8 @@ levelbar > trough > block.high, levelbar > trough > block:not(.empty) {
 }
 
 levelbar > trough > block.full {
-  border-color: #76AF6F;
-  background-color: #76AF6F;
+  border-color: #A0C980;
+  background-color: #A0C980;
 }
 
 levelbar > trough > block.empty {
@@ -5039,13 +5039,13 @@ columnview row:not(:selected) cell editablelabel.editing text selection {
 
 .app-notification .linked:not(.vertical) > entry + entry:drop(active):not(:last-child),
 .app-notification .linked:not(.vertical) > entry + entry:drop(active):last-child {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
 }
 
 .app-notification .linked:not(.vertical) > entry:drop(active):not(:only-child) + entry,
 .app-notification .linked:not(.vertical) > entry:drop(active):not(:only-child) + button,
 .app-notification .linked:not(.vertical) > entry:drop(active):not(:only-child) + combobox > box > button.combo {
-  border-left-color: #D19A66;
+  border-left-color: #A0C980;
   margin-left: 0;
 }
 
@@ -5462,7 +5462,7 @@ placessidebar .navigation-sidebar > row label.sidebar-label:dir(rtl) {
 placessidebar .navigation-sidebar > row.sidebar-placeholder-row {
   padding: 0 8px;
   min-height: 2px;
-  background-image: linear-gradient(to bottom, #D19A66, #D19A66);
+  background-image: linear-gradient(to bottom, #A0C980, #A0C980);
   background-clip: content-box;
 }
 
@@ -5471,13 +5471,13 @@ placessidebar .navigation-sidebar > row.sidebar-new-bookmark-row {
 }
 
 placessidebar .navigation-sidebar > row:drop(active):not(:disabled) {
-  color: #D19A66;
-  box-shadow: inset 0 1px #D19A66, inset 0 -1px #D19A66;
+  color: #A0C980;
+  box-shadow: inset 0 1px #A0C980, inset 0 -1px #A0C980;
 }
 
 placessidebar .navigation-sidebar > row:drop(active):not(:disabled):selected {
   color: #FAFAFA;
-  background-color: #D19A66;
+  background-color: #A0C980;
 }
 
 placesview .server-list-button > image {
@@ -6101,9 +6101,9 @@ shortcut > .keycap {
 
 :not(decoration):not(window):drop(active):focus,
 :not(decoration):not(window):drop(active) {
-  border-color: #D19A66;
-  box-shadow: inset 0 0 0 1px #D19A66;
-  caret-color: #D19A66;
+  border-color: #A0C980;
+  box-shadow: inset 0 0 0 1px #A0C980;
+  caret-color: #A0C980;
 }
 
 stackswitcher > button.text-button {
@@ -6441,8 +6441,8 @@ button.card:checked {
 }
 
 button.card:drop(active) {
-  color: #D19A66;
-  box-shadow: inset 0 0 0 1px #D19A66;
+  color: #A0C980;
+  box-shadow: inset 0 0 0 1px #A0C980;
 }
 
 menubutton.osd {
@@ -6824,7 +6824,7 @@ row.entry.warning .suggested-action {
 }
 
 row.entry.success text > selection:focus-within {
-  background-color: alpha(#76AF6F,0.2);
+  background-color: alpha(#A0C980,0.2);
 }
 
 row.entry.success text > cursor-handle > contents {
@@ -6837,8 +6837,8 @@ row.entry.success entry > text > placeholder, row.entry.success spinbutton:not(.
 }
 
 row.entry.success .suggested-action {
-  background-color: #76AF6F;
-  color: #FAFAFA;
+  background-color: #A0C980;
+  color: #DDE2E7;
 }
 
 row.combo image.dropdown-arrow:disabled {
@@ -7295,8 +7295,8 @@ tabthumbnail > box {
 }
 
 tabthumbnail:drop(active) {
-  box-shadow: inset 0 0 0 3px alpha(#D19A66,0.4);
-  background-color: alpha(#D19A66,0.1);
+  box-shadow: inset 0 0 0 3px alpha(#A0C980,0.4);
+  background-color: alpha(#A0C980,0.1);
 }
 
 tabthumbnail .needs-attention:dir(ltr) {
@@ -8010,12 +8010,12 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:drop(active):not(:disabled), .nautilus-window flap .navigation-sidebar > row:drop(active):not(:disabled) {
-  color: #D19A66;
+  color: #A0C980;
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:drop(active):not(:disabled):selected, .nautilus-window flap .navigation-sidebar > row:drop(active):not(:disabled):selected {
   color: #FAFAFA;
-  background-color: #D19A66;
+  background-color: #A0C980;
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar separator, .nautilus-window flap .navigation-sidebar separator {
@@ -8308,7 +8308,7 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color unfocused_borders rgba(32, 32, 35, 0.25);
 @define-color warning_color #DEB974;
 @define-color error_color #EC7279;
-@define-color success_color #76AF6F;
+@define-color success_color #A0C980;
 @define-color placeholder_text_color #A8A8A8;
 @define-color link_color #93c75f;
 @define-color content_view_bg #33353F;
